add: add drum machine project

--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@
 				<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 			</div>
 
+			<h4>Drum Machine</h4>
+			<p>Description: Simple drum machine with track plackback feature</p>
+			<p>Technologies used:</p>
+			<ul>
+				<li>React</li>
+			</ul>
+			<div>
+				<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="js,result" data-slug-hash="ZEmrjwE" data-user="Nic_Sevic" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+					<span>See the Pen <a href="https://codepen.io/Nic_Sevic/pen/ZEmrjwE">
+					FCC - FrontEnd - Drum Machine</a> by Nic-Sevic (<a href="https://codepen.io/Nic_Sevic">@Nic_Sevic</a>)
+					on <a href="https://codepen.io">CodePen</a>.</span>
+				  </p>
+				  <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+			</div>
+
 			<h4>Quote Machine</h4>
 			<p>Description: Displays a random quote. You can request a new quote. You can also share the generator to
 				Tumblr.</p>
@@ -122,6 +137,7 @@
 			</div>
 
 			<h4>Calculator</h4>
+			<p>In Progress</p>
 			<p>Description: Basic JS calculator</p>
 			<p>Technologies used: </p>
 			<ul>
@@ -141,11 +157,13 @@
 			</div>
 
 			<h4>25:5 Clock</h4>
+			<p>In Progress</p>
 			<p>Description: Displays a random quote. You can request a new quote. You can also share the generator to
 				Tumblr.</p>
 			<p>Technologies used: </p>
 			<ul>
 				<li>React</li>
+				<li>Redux?</li>
 			</ul>
 			<div>
 				<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="js,result"
