update: add public repo info for dev circle project

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 			</ul>
 			<div>
 				<a href="https://github.com/Nic-Sevic/dev-learning-circle">The fork of the repo with my branch merged to trunk</a>
+				<a href="https://github.com/Nic-Sevic/dev-learning-circle-public"> Public repo with the main code </a>
 
 			</div>
 		</div>
