--- a/index.html
+++ b/index.html
@@ -17,168 +17,201 @@
 
 		<hr>
 
-		<h3>Extracurricular Work</h3>
+		<h3>Coursera Learnings</h3>
+		<!-- add content from google it automation with python course -->
 		<div>
-			<h4>Anyone can register notice</h4>
-			<p>Description: A notice to alert WoA users that the `users_can_register` option is active. The intent of
-				this notice is to help reduce instances of maliciousl registered users, particularly admins. </p>
-			<p>Of note: I also deployed the first PR (with a kind shadow) in order to practice deployment checks and
-				building the deployment </p>
-			<p>Technologies used: </p>
+			<h4>Google IT Automation with Python</h4>
+			<p>Description: A series of projects and quizzes to help me upskill Python and automation.</p>
+			<a href="https://www.coursera.org/specializations/google-it-automation">Course link</a>
+			<a href="https://coursera.org/share/d57e5ebab5251281b9e23bcef8e11210">Certificate Link</a>
+			<p>Scripts written: </p>
 			<ul>
-				<li>PHP</li>
-				<li>jQuery</li>
-				<li>WordPress</li>
+				<li>Transforming images using PIL - <a
+						href=https://github.com/Nic-Sevic/Coursera/blob/main/image_cleanup.py">image_cleanup.py</a></li>
+				<li>Reviews - <a href="https://github.com/Nic-Sevic/Coursera/blob/main/reviews.py">reviews.py</a></li>
+				<li>Mailing a PDF sales report using reportlab and smtplib - <a
+						href="https://github.com/Nic-Sevic/Coursera/blob/main/mailing_PDF.py">mailing_PDF.py</a></li>
+				<li>Putting all the pieces together (processing images, uploading data to server, generating PDF report,
+					handling mailing, monitoring system for errors) - <a
+						href="https://github.com/Nic-Sevic/Coursera/tree/main/catalog_update">catalog_update</a></li>
 			</ul>
 			<div>
-				<a href=https://github.com/Automattic/wpcomsh/pull/1281>Original PR</a>
-			</div>
-			<div>
-				<a href="https://github.com/Automattic/wpcomsh/pull/1404">PR addressing user feedback</a>
-			</div>
-			<div>
-				<a href="https://github.com/Automattic/wpcomsh/pull/1376">Updates language files for post
-					translation</a>
-			</div>
-		</div>
-		<div>
-			<h4>Updating blocked plugins functionality</h4>
-			<p>Description: Updates wpcomsh and calypso to include newly blocked plugins on WoA. </p>
-			<p>Technologies used: </p>
-			<ul>
-				<li>PHP</li>
-				<li>WordPress</li>
-			</ul>
-			<div>
-				<a href="https://github.com/Automattic/wpcomsh/pull/1055">wpcomsh changes</a>
-			</div>
-			<div>
-				<a href="https://github.com/Automattic/wp-calypso/pull/66050">calypso changes</a>
-			</div>
-		</div>
 
-		<hr>
+				<hr>
 
-		<h3>Learning Circle</h3>
-		<div>
-			<h4>Menu shortcode plugin</h4>
-			<p>Description: A project designed to help us get familiar with how dev environments are created, how
-				WordPress plugins are built, how packages are built, and various React technologies.</p>
-			<p>Technologies used: </p>
-			<ul>
-				<li>PHP</li>
-				<li>React</li>
-				<li>WordPress</li>
-				<li>Webpack</li>
-				<li>npm</li>
-				<li>Composer</li>
-				<li>Docker</li>
-			</ul>
-			<div>
-				<a href="https://github.com/Nic-Sevic/dev-learning-circle">The fork of the repo with my branch merged to trunk</a>
-				<a href="https://github.com/Nic-Sevic/dev-learning-circle-public"> Public repo with the main code </a>
+				<h3>Contributions to Automattic Code</h3>
+				<div>
+					<h4>Anyone can register notice</h4>
+					<p>Description: A notice to alert WoA users that the `users_can_register` option is active. The
+						intent of
+						this notice is to help reduce instances of maliciousl registered users, particularly admins.
+					</p>
+					<p>Of note: I also deployed the first PR (with a kind shadow) in order to practice deployment checks
+						and
+						building the deployment </p>
+					<p>Technologies used: </p>
+					<ul>
+						<li>PHP</li>
+						<li>jQuery</li>
+						<li>WordPress</li>
+					</ul>
+					<div>
+						<a href=https://github.com/Automattic/wpcomsh/pull/1281>Original PR</a>
+					</div>
+					<div>
+						<a href="https://github.com/Automattic/wpcomsh/pull/1404">PR addressing user feedback</a>
+					</div>
+					<div>
+						<a href="https://github.com/Automattic/wpcomsh/pull/1376">Updates language files for post
+							translation</a>
+					</div>
+				</div>
+				<div>
+					<h4>Updating blocked plugins functionality</h4>
+					<p>Description: Updates wpcomsh and calypso to include newly blocked plugins on WoA. </p>
+					<p>Technologies used: </p>
+					<ul>
+						<li>PHP</li>
+						<li>WordPress</li>
+					</ul>
+					<div>
+						<a href="https://github.com/Automattic/wpcomsh/pull/1055">wpcomsh changes</a>
+					</div>
+					<div>
+						<a href="https://github.com/Automattic/wp-calypso/pull/66050">calypso changes</a>
+					</div>
+				</div>
 
-			</div>
-		</div>
+				<hr>
 
-		<hr>
+				<h3>Learning Circle</h3>
+				<div>
+					<h4>Menu shortcode plugin</h4>
+					<p>Description: A project designed to help us get familiar with how dev environments are created,
+						how
+						WordPress plugins are built, how packages are built, and various React technologies.</p>
+					<p>Technologies used: </p>
+					<ul>
+						<li>PHP</li>
+						<li>React</li>
+						<li>WordPress</li>
+						<li>Webpack</li>
+						<li>npm</li>
+						<li>Composer</li>
+						<li>Docker</li>
+					</ul>
+					<div>
+						<a href="https://github.com/Nic-Sevic/dev-learning-circle">The fork of the repo with my branch
+							merged to trunk</a>
+						<a href="https://github.com/Nic-Sevic/dev-learning-circle-public"> Public repo with the main
+							code </a>
 
-		<h3>freeCodeCamp - Front End Development Libraries cert projects</h3>
-		<div>
-			<h4>Markdown Previewer</h4>
-			<p>Description: Side by side editor and preview pane for markdown.</p>
-			<p>Technologies used:</p>
-			<ul>
-				<li>React</li>
-				<li>Marked library</li>
-				<li>DOMPurify library</li>
-			</ul>
-			<div>
-				<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="js,result"
-					data-slug-hash="rNQmoZN" data-user="Nic_Sevic"
-					style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-					<span>See the Pen <a href="https://codepen.io/Nic_Sevic/pen/rNQmoZN">
-							FCC - Markdown Previewer</a> by Nic-Sevic (<a
-							href="https://codepen.io/Nic_Sevic">@Nic_Sevic</a>)
-						on <a href="https://codepen.io">CodePen</a>.</span>
-				</p>
-				<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-			</div>
+					</div>
+				</div>
 
-			<h4>Drum Machine</h4>
-			<p>Description: Simple drum machine with track plackback feature</p>
-			<p>Technologies used:</p>
-			<ul>
-				<li>React</li>
-			</ul>
-			<div>
-				<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="js,result" data-slug-hash="ZEmrjwE" data-user="Nic_Sevic" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-					<span>See the Pen <a href="https://codepen.io/Nic_Sevic/pen/ZEmrjwE">
-					FCC - FrontEnd - Drum Machine</a> by Nic-Sevic (<a href="https://codepen.io/Nic_Sevic">@Nic_Sevic</a>)
-					on <a href="https://codepen.io">CodePen</a>.</span>
-				  </p>
-				  <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-			</div>
+				<hr>
 
-			<h4>Quote Machine</h4>
-			<p>Description: Displays a random quote. You can request a new quote. You can also share the generator to
-				Tumblr.</p>
-			<p>Technologies used: </p>
-			<ul>
-				<li>React</li>
-			</ul>
-			<div>
-				<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="js,result"
-					data-slug-hash="eYPEdKG" data-user="Nic_Sevic"
-					style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-					<span>See the Pen <a href="https://codepen.io/Nic_Sevic/pen/eYPEdKG">
-							FCC - Quote Generator</a> by Nic-Sevic (<a
-							href="https://codepen.io/Nic_Sevic">@Nic_Sevic</a>)
-						on <a href="https://codepen.io">CodePen</a>.</span>
-				</p>
-				<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-			</div>
+				<h3>freeCodeCamp - Front End Development Libraries cert projects</h3>
+				<div>
+					<h4>Markdown Previewer</h4>
+					<p>Description: Side by side editor and preview pane for markdown.</p>
+					<p>Technologies used:</p>
+					<ul>
+						<li>React</li>
+						<li>Marked library</li>
+						<li>DOMPurify library</li>
+					</ul>
+					<div>
+						<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="js,result"
+							data-slug-hash="rNQmoZN" data-user="Nic_Sevic"
+							style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+							<span>See the Pen <a href="https://codepen.io/Nic_Sevic/pen/rNQmoZN">
+									FCC - Markdown Previewer</a> by Nic-Sevic (<a
+									href="https://codepen.io/Nic_Sevic">@Nic_Sevic</a>)
+								on <a href="https://codepen.io">CodePen</a>.</span>
+						</p>
+						<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+					</div>
 
-			<h4>Calculator</h4>
-			<p>Description: Basic JS calculator</p>
-			<p>Technologies used: </p>
-			<ul>
-				<li>React</li>
-				<li>frustration</li>
-			</ul>
-			<div>
-				<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="js,result"
-					data-slug-hash="rNQdJWY" data-user="Nic_Sevic"
-					style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-					<span>See the Pen <a href="https://codepen.io/Nic_Sevic/pen/rNQdJWY">
-							FCC - FrontEnd - Calculator</a> by Nic-Sevic (<a
-							href="https://codepen.io/Nic_Sevic">@Nic_Sevic</a>)
-						on <a href="https://codepen.io">CodePen</a>.</span>
-				</p>
-				<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-			</div>
+					<h4>Drum Machine</h4>
+					<p>Description: Simple drum machine with track plackback feature</p>
+					<p>Technologies used:</p>
+					<ul>
+						<li>React</li>
+					</ul>
+					<div>
+						<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="js,result"
+							data-slug-hash="ZEmrjwE" data-user="Nic_Sevic"
+							style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+							<span>See the Pen <a href="https://codepen.io/Nic_Sevic/pen/ZEmrjwE">
+									FCC - FrontEnd - Drum Machine</a> by Nic-Sevic (<a
+									href="https://codepen.io/Nic_Sevic">@Nic_Sevic</a>)
+								on <a href="https://codepen.io">CodePen</a>.</span>
+						</p>
+						<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+					</div>
 
-			<h4>25:5 Clock</h4>
-			<p>In Progress</p>
-			<p>Description: Displays a random quote. You can request a new quote. You can also share the generator to
-				Tumblr.</p>
-			<p>Technologies used: </p>
-			<ul>
-				<li>React</li>
-				<li>Redux?</li>
-			</ul>
-			<div>
-				<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="js,result"
-					data-slug-hash="QWJrOwg" data-user="Nic_Sevic"
-					style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-					<span>See the Pen <a href="https://codepen.io/Nic_Sevic/pen/QWJrOwg">
-							FCC - FrontEnd - Clock</a> by Nic-Sevic (<a
-							href="https://codepen.io/Nic_Sevic">@Nic_Sevic</a>)
-						on <a href="https://codepen.io">CodePen</a>.</span>
-				</p>
-				<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-			</div>
-		</div>
+					<h4>Quote Machine</h4>
+					<p>Description: Displays a random quote. You can request a new quote. You can also share the
+						generator to
+						Tumblr.</p>
+					<p>Technologies used: </p>
+					<ul>
+						<li>React</li>
+					</ul>
+					<div>
+						<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="js,result"
+							data-slug-hash="eYPEdKG" data-user="Nic_Sevic"
+							style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+							<span>See the Pen <a href="https://codepen.io/Nic_Sevic/pen/eYPEdKG">
+									FCC - Quote Generator</a> by Nic-Sevic (<a
+									href="https://codepen.io/Nic_Sevic">@Nic_Sevic</a>)
+								on <a href="https://codepen.io">CodePen</a>.</span>
+						</p>
+						<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+					</div>
+
+					<h4>Calculator</h4>
+					<p>Description: Basic JS calculator</p>
+					<p>Technologies used: </p>
+					<ul>
+						<li>React</li>
+						<li>frustration</li>
+					</ul>
+					<div>
+						<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="js,result"
+							data-slug-hash="rNQdJWY" data-user="Nic_Sevic"
+							style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+							<span>See the Pen <a href="https://codepen.io/Nic_Sevic/pen/rNQdJWY">
+									FCC - FrontEnd - Calculator</a> by Nic-Sevic (<a
+									href="https://codepen.io/Nic_Sevic">@Nic_Sevic</a>)
+								on <a href="https://codepen.io">CodePen</a>.</span>
+						</p>
+						<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+					</div>
+
+					<h4>25:5 Clock</h4>
+					<p>In Progress</p>
+					<p>Description: Displays a random quote. You can request a new quote. You can also share the
+						generator to
+						Tumblr.</p>
+					<p>Technologies used: </p>
+					<ul>
+						<li>React</li>
+						<li>Redux?</li>
+					</ul>
+					<div>
+						<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="js,result"
+							data-slug-hash="QWJrOwg" data-user="Nic_Sevic"
+							style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+							<span>See the Pen <a href="https://codepen.io/Nic_Sevic/pen/QWJrOwg">
+									FCC - FrontEnd - Clock</a> by Nic-Sevic (<a
+									href="https://codepen.io/Nic_Sevic">@Nic_Sevic</a>)
+								on <a href="https://codepen.io">CodePen</a>.</span>
+						</p>
+						<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+					</div>
+				</div>
 
 
 	</section>
